Add item aliases

--- a/app/views/by_navigation/default/_item.html.erb
+++ b/app/views/by_navigation/default/_item.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag(:li, id: "#{item.html_id}-item}",
+<%= content_tag(:li, id: "#{item.html_id}-item",
                      class: "#{item.html_class}",
                      data: { url: item.url }) do %>
 
